--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="splash_screen_icon_size">36dp</dimen>
     <dimen name="splash_screen_icon_size_circle">48dp</dimen>
+    <dimen name="navigation_bar_height_fallback">48dp</dimen>
+    <dimen name="status_bar_height_fallback">24dp</dimen>
 </resources>
